rules.v4
# Generated by iptables-save v1.4.21 on Fri Feb 12 13:57:08 2016
*nat
:PREROUTING ACCEPT [28:2221]
:INPUT ACCEPT [4:304]
:OUTPUT ACCEPT [2:441]
:POSTROUTING ACCEPT [2:441]
-A POSTROUTING -s 172.16.1.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 172.16.1.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 172.16.1.0/24 ! -d 172.16.1.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 172.16.1.0/24 ! -d 172.16.1.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 172.16.1.0/24 ! -d 172.16.1.0/24 -j MASQUERADE
-A POSTROUTING -s 172.16.0.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 172.16.0.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 172.16.0.0/24 ! -d 172.16.0.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 172.16.0.0/24 ! -d 172.16.0.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 172.16.0.0/24 ! -d 172.16.0.0/24 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -s 10.128.0.0/24 -j MASQUERADE
COMMIT
# Completed on Fri Feb 12 13:57:08 2016
# Generated by iptables-save v1.4.21 on Fri Feb 12 13:57:08 2016
*mangle
:PREROUTING ACCEPT [405:49174]
:INPUT ACCEPT [397:48521]
:FORWARD ACCEPT [8:653]
:OUTPUT ACCEPT [243:42973]
:POSTROUTING ACCEPT [251:43626]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Fri Feb 12 13:57:08 2016
# Generated by iptables-save v1.4.21 on Fri Feb 12 13:57:08 2016
*filter
:INPUT ACCEPT [2:168]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:840]
-A INPUT -i fuel-adm-public -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i fuel-adm-public -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i fuel-adm-public -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i fuel-adm-public -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i fuel-public -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i fuel-public -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i fuel-public -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i fuel-public -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i fuel-pxe -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i fuel-pxe -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i fuel-pxe -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i fuel-pxe -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -s 10.128.0.0/24 -j ACCEPT
-A FORWARD -d 172.16.1.0/24 -o fuel-adm-public -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -i fuel-adm-public -j ACCEPT
-A FORWARD -i fuel-adm-public -o fuel-adm-public -j ACCEPT
-A FORWARD -d 172.16.0.0/24 -o fuel-public -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.16.0.0/24 -i fuel-public -j ACCEPT
-A FORWARD -i fuel-public -o fuel-public -j ACCEPT
-A FORWARD -i fuel-pxe -o fuel-pxe -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A OUTPUT -o fuel-adm-public -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o fuel-public -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o fuel-pxe -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o virbr1 -p udp -m udp --dport 68 -j ACCEPT
#by az
-A INPUT -i lo -j ACCEPT
-A INPUT -i fuel+ -j ACCEPT
-A INPUT -p tcp -m state --dport 22 --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --dport 1194 --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p udp --dport 1194 -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-P INPUT DROP
COMMIT
# Completed on Fri Feb 12 13:57:08 2016
